[package]
name = "game_lang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.3"
log = "0.4.21"
logos = "0.14.0"
owo-colors = "4.0.0"
smol = "2.0.0"
strum = { version = "0.26.1", features = ["derive"] }
strum_macros = "0.26.1"
