[package]
name = "game_lang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.11"
ariadne = "0.4"
clap = { version = "4.5", features = ["derive"] }
ecow = "0.2"
env_logger = "0.11"
log = "0.4"
logos = "0.14"
owo-colors = "4.0"
rustyline = "14.0"
slotmap = "1.0"
smol = "2.0"
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
